--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -4,13 +4,39 @@
     &__wrapper
         max-width: 1440px
         padding: 26px 80px
-        margin: auro
+        margin: auto
         display: flex
         justify-content: space-between
         align-items: center
     &__logo
         max-width: 100px
     &__btn
+
+.header-info
+    width: 100%
+    position: absolute
+    top: 0
+    background: transparent
+    &__wrapper
+        max-width: 1440px
+        padding: 26px 80px
+        margin: auto
+        display: flex
+        justify-content: space-between
+        align-items: center
+    &__logo
+        max-width: 100px
+    &__menu
+        display: flex
+        align-items: center
+        cursor: pointer
+        & p
+            margin-left: 5px
+            // font-family: 'Silk Serif'
+            font-weight: 400
+            font-size: 14px
+            line-height: 236%
+            color: #FFFFFF
         
 @media screen and (max-width: 767px)
     .header
