--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,6 +18,11 @@
 	src: url('../fonts/calvino/Calvino-Grande-Regular-trial.ttf') format('truetype')
 	font-weight: 400
 	font-style: normal
+@font-face 
+	font-family: 'Calvino Grande'
+	src: url('../fonts/calvino/Calvino-Grande-Semibold-trial.ttf') format('truetype')
+	font-weight: 600
+	font-style: normal
 
 @import 'general'
 @import 'header'
@@ -30,3 +35,5 @@
 @import 'creation-page-epitaph-media'
 @import 'creation-page-refs-remembers'
 @import 'creation-page-find'
+
+@import 'page-head'
