--- a/sass/_creation-page-epitaph-media.sass
+++ b/sass/_creation-page-epitaph-media.sass
@@ -3,14 +3,18 @@
         font-family: 'Grafita Special'
         margin-bottom: 30px
         text-align: center
-        padding: 0 25px
-
+        padding: 0 50px
+.creation-bibliograph__text
+    font-family: 'Grafita Special'
+    margin-bottom: 30px
+    text-align: center
+    padding: 0 40px
 .creation-media
     &__text
         font-family: 'Grafita Special'
         margin-bottom: 30px
         text-align: center
-        padding: 0 65px
+        padding: 0 80px
     &__photo-text
         font-family: 'Grafita Special'
         margin-bottom: 18px
@@ -56,6 +60,11 @@
             display: none
 
 @media screen and (max-width: 767px)
+    .creation-epitaph
+        &__text
+            padding: 0 25px
+    .creation-bibliograph__text
+        padding: 0 10px
     .creation-media
         &__inputs
             flex-direction: column
