page media section

--- a/sass/_page-biography.sass
+++ b/sass/_page-biography.sass
@@ -18,6 +18,8 @@
         margin-bottom: 68px
     &__content
         flex-basis: 40%
+        &:first-child
+            margin-right: 40px
     &__item
         line-height: 1.2
         color: $text-color
