--- a/sass/_page-media.sass
+++ b/sass/_page-media.sass
@@ -1,6 +1,6 @@
 .page-media
     background: #fff
-    padding-bottom: 100px
+    padding-bottom: 115px
     &__hero
         max-width: 1440px
         padding: 0 80px
@@ -88,3 +88,6 @@
         &:hover::after
             opacity: 1
             cursor: url("../assets/cursor/Open.png"), pointer
+
+.page-media__video .page-media__item:hover:after
+    cursor: url("../assets/cursor/Play.png"), pointer
