--- a/sass/_page-links.sass
+++ b/sass/_page-links.sass
@@ -61,3 +61,8 @@
         transition: opacity 0.3s ease
         &:hover
             opacity: 1
+
+@media screen and (max-width: 425px)
+    .page-links
+        &__list
+            flex-direction: column
