links section adaptive & head edits

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -42,9 +42,17 @@
     .header
         &__wrapper
             padding: 26px 30px
+    .header-info
+        &__wrapper
+            padding: 26px 30px
         
 @media screen and (max-width: 424px)
     .header
+        &__wrapper
+            padding: 16px 20px
+        &__logo
+            max-width: 87px
+    .header-info
         &__wrapper
             padding: 16px 20px
         &__logo
