--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -98,7 +98,15 @@ textarea
     opacity: 0.8
     padding-left: 16px
     margin-bottom: 8px
+.page-hero-paddings
+    padding: 0 80px
 
+@media screen and (max-width: 800px)
+    .page-hero-paddings
+        padding: 0 40px
+@media screen and (max-width: 600px)
+    .page-hero-paddings
+        padding: 0 20px
 @media screen and (max-width: 424px)
     .container
         padding: 0 20px
